--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,48 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-03-26 14:08:00 -0400 
+%% Created for Sean Bittner at 2021-04-14 09:17:06 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{saleem2013integration,
+	author = {Saleem, Aman B and Ayaz, Asl{\i} and Jeffery, Kathryn J and Harris, Kenneth D and Carandini, Matteo},
+	date-added = {2021-04-14 09:17:01 -0400},
+	date-modified = {2021-04-14 09:17:01 -0400},
+	journal = {Nature neuroscience},
+	number = {12},
+	pages = {1864--1869},
+	publisher = {Nature Publishing Group},
+	title = {Integration of visual motion and locomotion in mouse visual cortex},
+	volume = {16},
+	year = {2013}}
+
+@article{niell2010modulation,
+	author = {Niell, Cristopher M and Stryker, Michael P},
+	date-added = {2021-04-14 09:15:21 -0400},
+	date-modified = {2021-04-14 09:15:21 -0400},
+	journal = {Neuron},
+	number = {4},
+	pages = {472--479},
+	publisher = {Elsevier},
+	title = {Modulation of visual responses by behavioral state in mouse visual cortex},
+	volume = {65},
+	year = {2010}}
+
+@article{musall2019single,
+	author = {Musall, Simon and Kaufman, Matthew T and Juavinett, Ashley L and Gluf, Steven and Churchland, Anne K},
+	date-added = {2021-04-12 10:28:28 -0400},
+	date-modified = {2021-04-12 10:28:28 -0400},
+	journal = {Nature neuroscience},
+	number = {10},
+	pages = {1677--1686},
+	publisher = {Nature Publishing Group},
+	title = {Single-trial neural dynamics are dominated by richly varied movements},
+	volume = {22},
+	year = {2019}}
 
 @article{felleman1991distributed,
 	author = {Felleman, Daniel J and Van Essen, David C},
